fix display issue on scheduler.
fixes CNVS-3738

previousy, display of the scheduler page would be off if
only one, nameless appointment was present and the user
attempted to click its gear menu.

now we expand the height of the appointment group list to
avoid clipping and layout issues.

test plan:
  * enable calendar2 and scheduler on an account;
  * as a user with permissions to create an appointment,
    create an appointment with no name;
  * reload the page, click the gear menu, and verify that
    the layout of the page is not affected.

Reviewed-on: https://gerrit.instructure.com/17690
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Marc LeGendre <marc@instructure.com>

--- a/app/stylesheets/calendar/scheduler.sass
+++ b/app/stylesheets/calendar/scheduler.sass
@@ -38,6 +38,7 @@ button.single_item_done_button
   font-size: 18px
 .appointment-group-item
   border-top: 1px solid #ccc
+  min-height: 68px
   padding: 6px 0 26px
   clear: both
   h3
